<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manejadores.logIn"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/cero_uno_logo"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/etiqueta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/tv_etiqueta"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            tools:text="@string/tv_etiqueta"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/ingresar_usuario"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/etiqueta"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/ingresar_password"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/usuario"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:padding="10dp"
            android:text="@string/btn_ingresar"
            android:textStyle="bold"
            android:onClick="onClick"
            app:layout_constraintTop_toBottomOf="@+id/pass" />

        <Button
            android:id="@+id/btn_registrarse"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:textStyle="bold"
            android:text="@string/btn_registrarse"
            app:layout_constraintTop_toBottomOf="@+id/btn_ingresar"
            android:padding="10dp"
            android:onClick="Ingresar"/>

    </LinearLayout>

</RelativeLayout>