<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manejadores.ajustes">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acercaDe"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_light"
            android:textSize="45dp" />


        <LinearLayout
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="1dp"
            android:background="@color/cardview_dark_background"
            android:orientation="horizontal"
            android:padding="50dp"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acercaTexto"
            android:textSize="20dp"
            android:fontFamily="@font/roboto_regular"
            android:padding="20dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acercaTexto2"
            android:textSize="24dp"
            android:fontFamily="@font/roboto_regular"
            android:padding="20dp"
            android:autoLink="all"
            android:textColor="@color/colorPrimaryDark"
            />

    </LinearLayout>
</FrameLayout>