<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ambientes.Dormitorio"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dormitorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_dormitorio"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_light"
                android:textSize="45dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageButton
                    android:id="@+id/botonTvDorm1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:onClick="onClick"
                    android:src="@drawable/ic_tv_black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/tv_televisor"
                    android:textAlignment="center"
                    android:textSize="25dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background"
                android:orientation="horizontal"
                ></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageButton
                            android:id="@+id/l31"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/foco_apagado"
                            android:onClick="onClick"
                            android:tag="l31" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/luz_1"
                            android:textAlignment="center"
                            android:textSize="25dp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <ImageButton
                            android:id="@+id/l32"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/foco_apagado"
                            android:onClick="onClick"
                            android:tag="l32" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/luz_2"
                            android:textAlignment="center"
                            android:textSize="25dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:background="@color/cardview_dark_background"
                android:orientation="horizontal"
                ></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="10dp">


                    <SeekBar
                        android:id="@+id/seekBar_1"
                        android:layout_width="138dp"
                        android:layout_height="138dp"
                        android:rotation="270" />

                    <TextView
                        android:id="@+id/tv_persiana1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/persiana_1"
                        android:textSize="25dp"
                        android:fontFamily="@font/roboto_light"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="10dp">

                    <SeekBar
                        android:id="@+id/seekBar_2"
                        android:layout_width="138dp"
                        android:layout_height="138dp"
                        android:rotation="270" />

                    <TextView
                        android:id="@+id/tv_persiana2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/persiana_2"
                        android:textSize="25dp"
                        android:fontFamily="@font/roboto_light"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</FrameLayout>